# Sentinel-gh

./: README.md  pyproject.toml
.github/workflows/: ci.yml  daily-pulse.yml
bundles/: 2026-07-08.json  2026-07-09.json  2026-07-10.json  2026-07-11.json  2026-07-12.json  2026-07-13.json  2026-07-14.json  2026-07-15.json  2026-07-16.json  2026-07-17.json  2026-07-18.json  2026-07-19.json  2026-07-20.json  index.json
data/events/: 2026-06.jsonl  2026-07.jsonl
data/feed/: 2026-07-08.json  2026-07-09.json  2026-07-10.json  2026-07-11.json  2026-07-12.json  2026-07-13.json  2026-07-14.json  2026-07-15.json  2026-07-16.json  2026-07-17.json  2026-07-18.json  2026-07-19.json  2026-07-20.json  latest.json  schema.json
data/follows/: 2026-07.jsonl
data/pulse/: 2026-07-08.json  2026-07-09.json  2026-07-10.json  2026-07-11.json  2026-07-12.json  2026-07-13.json  2026-07-14.json  2026-07-15.json  2026-07-16.json  2026-07-17.json  2026-07-18.json  2026-07-19.json  2026-07-20.json  latest.json  schema.json
data/received/: 2026-07.jsonl
docs/: design-feed-radar.md
src/sentinel/: gh.py  run.py  state.py  util.py
src/sentinel/analyzers/: bundle.py  feed.py  persona.py  project.py  pulse.py
src/sentinel/collectors/: followees.py  following.py  received.py  trending.py
state/: followees.json  following.json  received.json
tests/: test_followees_watermark.py  test_outer_circle.py  test_persona.py  test_received.py
