[project]
name = "sentinel"
version = "0.1.0"
description = "Daily GitHub followee feed collector (Soundwave-style bundles for Megatron)"
requires-python = ">=3.12"
dependencies = ["httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel"]

[tool.pytest.ini_options]
pythonpath = ["src"]
